# surface-watch

./: .env.example  .gitignore  COPILOT.md  Dockerfile  PROJECT.md  README.md  docker-compose.yml  pyproject.toml
config/: scope.yaml  settings.yaml  wordlist.txt
src/surface_watch/: __main__.py  config.py  graph.py  models.py
src/surface_watch/alerting/: __init__.py  sekoia.py
src/surface_watch/collectors/: __init__.py  azure.py  base.py  ct.py  dns.py  portscan.py  rdap.py
src/surface_watch/export/: __init__.py  formats.py  pyvis_map.py
src/surface_watch/web/: __init__.py  app.py
src/surface_watch/web/static/: style.css
src/surface_watch/web/templates/: assets.html  base.html  config.html  ct_stream.html  dashboard.html  map.html  map_empty.html  scan_detail.html  scans.html
tests/: test_alerting.py  test_graph.py  test_models.py
